gcc-14.2.0/gcc/testsuite/gdc.test/runnable/imports/ufcs5a.d
version https://git-lfs.github.com/spec/v1
oid sha256:f0191ad58a01190037ae69c554c2b854e255be1994362c9c84c5dbd4401bf6ff
size 575
